--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,13 @@ language: java
 jdk:
   - oraclejdk9
   - openjdk9
+install:
+  - echo hello
 jobs:
   include:
     stage: test
-      install:
-        - echo hello test
       script:
         - echo world test
     stage: build
-      install:
-        - echo hello deploy
       script:
         - echo world deploy
