--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-language: java
 jdk:
   - oraclejdk9
   - openjdk9
@@ -7,7 +6,7 @@ jobs:
     - stage: test
       script:
         - echo testing
-      script:
+    - script:
         - echo testing too
     - stage: deploy
       script: 
