--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,9 +14,20 @@
        - checkout
        - run: echo "A more familiar hi"
        - run: sleep 5
+   three:
+     docker:
+       - image: circleci/ruby:2.4.1
+     steps:
+       - checkout
+       - run: echo "two more familiar hi"
+       - run: sleep 5
  workflows:
    version: 2
    one_and_two:
      jobs:
        - one
        - two
+       - three:
+        requires:
+          - one
+          - two
