--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,13 @@
        - checkout
        - run: echo "two more familiar hi"
        - run: sleep 5
+   four:
+     docker:
+       - image: circleci/ruby:2.4.1
+     steps:
+       - checkout
+       - run: echo "three more familiar hi"
+       - run: sleep 5
  workflows:
    version: 2
    one_and_two:
@@ -28,6 +35,9 @@
        - one
        - two
        - three:
+           requires:
+             - one
+       - four:
            requires:
              - one
              - two
