--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,13 @@
        - checkout
        - run: echo "three more familiar hi"
        - run: sleep 5
+   five:
+     docker:
+       - image: circleci/ruby:2.4.1
+     steps:
+       - checkout
+       - run: echo "four more familiar hi"
+       - run: sleep 5
  workflows:
    version: 2
    one_and_two:
@@ -41,3 +48,7 @@
            requires:
              - one
              - two
+       - five:
+           requires:
+             - one
+             - four
