--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,13 @@
        - checkout
        - run: echo "four more familiar hi"
        - run: sleep 5
+   six:
+     docker:
+       - image: circleci/ruby:2.4.1
+     steps:
+       - checkout
+       - run: echo "five more familiar hi"
+       - run: sleep 5
  workflows:
    version: 2
    one_and_two:
@@ -50,5 +57,8 @@
              - two
        - five:
            requires:
+             - two
+             - three
+       - six:
+           requires:
              - one
-             - four
