--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -1,6 +1,4 @@
 codeship_example:
-  build:
-    image: codeship_example
-    dockerfile: Dockerfile
+  build: .
   environment:
     EXAMPLE_ENV_VAR: example-var
